Task[PCOMP432-T-1-Momentum]: Save pre-trained model

--- a/.gitignore
+++ b/.gitignore
@@ -6209,3 +6209,5 @@ Datasets/Corolectal Cancer/STR/STR-EQYEENER.tif
 Datasets/Corolectal Cancer/STR/STR-ERADYCGV.tif
 Datasets/Corolectal Cancer/STR/STR-ERHWNWKI.tif
 Datasets/Corolectal Cancer/STR/STR-ERHYRPTP.tif
+
+Models
