Task[PCOMP432]: Add in new notebook

--- a/.gitignore
+++ b/.gitignore
@@ -6210,4 +6210,6 @@ Datasets/Corolectal Cancer/STR/STR-ERADYCGV.tif
 Datasets/Corolectal Cancer/STR/STR-ERHWNWKI.tif
 Datasets/Corolectal Cancer/STR/STR-ERHYRPTP.tif
 
+Datasets/Animal Faces/**
+
 Models
