--- a/.gitignore
+++ b/.gitignore
@@ -6212,4 +6212,5 @@ Datasets/Corolectal Cancer/STR/STR-ERHYRPTP.tif
 
 Datasets/Animal Faces/**
 
-Models
+Models/ResNet_Momentum_Corolectal_Cancer_pre_trained.tar
+Models/ResNet_Rmsprop_Corolectal_Cancer_pre_trained.tar
