--- a/.gitignore
+++ b/.gitignore
@@ -204,6 +204,7 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,jupyternotebooks,python
+Datasets/Prostate Cancer/** 
 Datasets/Colorectal Cancer/** 
 Datasets/Corolectal Cancer/.DS_Store
 Datasets/Corolectal Cancer/MUS/.DS_Store
